# Empat-IA

./: .gitignore  pyproject.toml  redis_teste.py
app/: connect.py  interfaces.py  main.py  services.py
app/adapters/: appvision.py
app/application/: use_cases.py
app/config/: connection_option.py
app/domain/: entities.py  exceptions.py  repositories.py  servicies.py
app/infrastructure/: repository.py  services.py
app/managers/: emotions.py  face.py  isolation_detector.py  person_model.py
app/tests/: test_dbscan.py  test_face.py  test_fer.py  test_slicing.py  test_yolo.py
app/tests/face/: test_face.py
app/tests/person/: person_test.py
yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
