[project]
name = "bytetrack-empatia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.1.0",
    "blue>=0.9.1",
    "dotenv>=0.9.9",
    "fer>=25.10.3",
    "insightface>=0.7.3",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.1.0",
    "redis>=7.4.0",
    "tensorflow>=2.21.0",
    "ultralytics>=8.4.48",
]
